--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ project(usb_cam)
 # find_package(camera_info_manager REQUIRED)
 # find_package(image_transport REQUIRED)
 find_package(builtin_interfaces REQUIRED)
+find_package(class_loader REQUIRED)
+find_package(internal_pub_sub REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
@@ -27,31 +29,35 @@ include_directories(include
 )
 
 ## Build the USB camera library
-add_library(${PROJECT_NAME} src/usb_cam.cpp)
-target_link_libraries(${PROJECT_NAME}
-  ${avcodec_LIBRARIES}
-  ${swscale_LIBRARIES}
-)
-
-## Declare a cpp executable
-add_executable(${PROJECT_NAME}_node nodes/usb_cam_node.cpp)
-target_link_libraries(${PROJECT_NAME}_node
-  ${PROJECT_NAME}
+add_library(usbcam SHARED src/usb_cam_core.cpp src/usb_cam.cpp)
+target_link_libraries(usbcam
   ${avcodec_LIBRARIES}
   ${swscale_LIBRARIES}
   # TODO(lucasw) should this have been in libavcodec?
   avutil
 )
-
-ament_target_dependencies(${PROJECT_NAME}
+ament_target_dependencies(usbcam
   "builtin_interfaces"
+  "class_loader"
+  "internal_pub_sub"
   "rclcpp"
   "sensor_msgs"
   "std_msgs"
   "std_srvs"
 )
+install(TARGETS
+  usbcam
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
 
-install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node DESTINATION lib/${PROJECT_NAME})
+add_executable(usb_cam_node src/usb_cam_node.cpp)
+target_link_libraries(usb_cam_node usbcam)
+ament_target_dependencies(usb_cam_node rclcpp usbcam)
+install(TARGETS usb_cam_node DESTINATION lib/${PROJECT_NAME})
+
+# Don't use this it runs very poorly
 install(PROGRAMS scripts/show_image.py DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
