install include dir and export lib #1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,12 @@ install(PROGRAMS scripts/show_image.py DESTINATION lib/${PROJECT_NAME})
 install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
 
+install(DIRECTORY include/${PROJECT_NAME}/ DESTINATION include/${PROJECT_NAME})
+
+ament_export_include_directories(
+  include
+)
+# ament_export_dependencies()
+ament_export_libraries(usbcam)
+
 ament_package()
