--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,17 @@ project(usb_cam)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS image_transport roscpp std_msgs std_srvs sensor_msgs camera_info_manager)
+find_package(catkin REQUIRED COMPONENTS
+  camera_info_manager
+  image_transport
+  roscpp
+  roslint
+  sensor_msgs
+  std_msgs
+  std_srvs
+)
+
+# roslint_cpp()
 
 ## pkg-config libraries
 find_package(PkgConfig REQUIRED)
