--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,7 @@
 
   <build_depend>image_transport</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>roslint</build_depend>
+  <!--build_depend>roslint</build_depend-->
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>sensor_msgs</build_depend>
